kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-app
  template:
    metadata:
      labels:
        app: homework-app
    spec:
      volumes:
      - name: homework-volume
        emptyDir: {}

      containers:
      - name: web-server
        image: nginx
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: homework-volume
          mountPath: /homework
        command: ["/bin/sh", "-c"]
        args: [
          "cp /homework/index.html /usr/share/nginx/html/index.html && \
          echo 'server { listen 8000; location / { root /usr/share/nginx/html; index index.html; } }' > /etc/nginx/conf.d/default.conf && \
          nginx -g 'daemon off;'"
        ]
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10

      nodeSelector:
        homework: "true"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
